# vpn_control_web

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  cache.py  db.py  main.py  models.py  poller.py  settings.py  ssh_client.py  ui.py  vpnctl.py
app/templates/: _logs.html  _servers.html  _status.html  base.html  dashboard.html
openwrt/: deploy.sh
openwrt/etc/init.d/: vpn-control-boot
openwrt/etc/vpn-control/: config.json
openwrt/usr/lib/vpn-control/: checker.sh  common.sh  parser.sh  renderer.sh  worker.sh
openwrt/usr/libexec/: vpnctl  vpnctl-ssh
tests/: test_api.py  test_vpnctl_parse.py
